# web3-blackjack

./: README.md
blackjack_font/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
blackjack_font/src/: App.vue
blackjack_font/src/components/: Page.vue
blackjack_font/src/utils/: fetchRequest.js
blackjack_web_backend/: Cargo.toml  package.json  pnpm-lock.yaml
blackjack_web_backend/src/: handler.rs  main.rs  model.rs
