[package]
name = "blackjack_web_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"